Update requirements, fix nanoleaf discovery
Use updated version of Q42 Hue library.
Refresh leaf data after discovering panels.
Catch errors during certain parts of streaming and discovery.
Cleanup unused code.

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -344,6 +344,7 @@ input:checked + .slider:before {
     background-repeat: no-repeat;
     background-position: center;
     padding: 15px;
+    color: white;
 }
 
 .lightRegion.checked, .clickRegion.checked, .nanoRegion.checked {
